--- a/cat.html
+++ b/cat.html
@@ -36,7 +36,7 @@
           backgroundColor: 16777215,
           parent: "catch-the-cat",
           statusBarAlign: "center",
-          credit: "xn213"
+          credit: "yigebeizi"
         });
       </script>
     </div>
