--- a/cat.html
+++ b/cat.html
@@ -40,5 +40,9 @@
         });
       </script>
     </div>
+      <h2 id="game">game</h2>
+      <ol>
+      <li><a href="https://yigebeizi.github.io/pages/catchcat/cat.html">围住小猫 catchcat</a></li>
+      </ol>
   </body>
 </html>
