--- a/cat.html
+++ b/cat.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <div class="container" align="center">
+    <!-- <div class="container" align="center">
       <div id="catch-the-cat"></div>
       <script>
         window.game = new CatchTheCatGame({
@@ -39,10 +39,12 @@
           credit: "yigebeizi"
         });
       </script>
-    </div>
+    </div> -->
+    <div>
       <h2 id="game">game</h2>
       <ol>
       <li><a href="https://yigebeizi.github.io/pages/catchcat/cat.html">围住小猫 catchcat</a></li>
       </ol>
+    </div>
   </body>
 </html>
