--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 
   <body>
     <div class="container">
-        11111查看是否显示
-        <!-- <h2 id="game">game</h2>
+        <h2 id="game">game</h2>
         <ol>
-        <li><a href="https://yigebeizi.github.io/pages/catchcat/cat.html">围住小猫 catchcat</a></li>
-        </ol> -->
+        <li><a href="https://yigebeizi.github.io/pages/catchcat">围住小猫 catchcat</a></li>
+        </ol>
     </div>
   </body>
 </html>
