--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,7 @@
         <ol>
         <li><a href="https://yigebeizi.github.io/pages/catchcat">围住小猫 catchcat</a></li>
         <li><a href="https://yigebeizi.github.io/pages/dist">酷跑 run</a></li>
+        <li><a href="https://yigebeizi.github.io/pages/snake/2021-snake">贪吃蛇 🐍</a></li>
         </ol>
     </div>
   </body>
