--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,7 @@
         <h2 id="game">game</h2>
         <ol>
         <li><a href="https://yigebeizi.github.io/pages/catchcat">围住小猫 catchcat</a></li>
+        <li><a href="https://yigebeizi.github.io/pages/catchjj">抓住金金 catchjj</a></li>
         <li><a href="https://yigebeizi.github.io/pages/dist">酷跑 run</a></li>
         <li><a href="https://yigebeizi.github.io/pages/snake/2021-snake">贪吃蛇 🐍</a></li>
         </ol>
